[metadata]
name = hy1am
description = A minimalistic test framework for Hy inspired by the Common Lisp 1am test package
long_description = file: README.md
author = Prashanth Kumar
author_email = prasxanth.kumar@gmail.com
version = 0.1
keywords =
  test
  Hy
classifiers =
  Topic :: Software Development
  Development Status :: 3 - Alpha
  Intended Audience :: Software/Developers
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
license = BSD 3-Clause License
license_files =
  LICENSE

[options]
python_requires >=3.9, <=3.12
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    hy==0.26
    hyrule==0.5.0
    toolz==0.12.0
    stdlib-list==0.9.0
    rich==13.7.0
    pandas==1.5.3
    pyjanitor==0.25.0
    
[options.package_data]
